Fix deprecated usage in JWT authorizer.